crates/lutum/tests/ui/hook_impl_singleton_last.stderr
error: #[hook(SlotType)] implementations for this slot must not declare `last: Option<Return>`
 --> tests/ui/hook_impl_singleton_last.rs:7:58
  |
7 | async fn append_suffix(_ctx: &lutum::Lutum, label: &str, last: Option<String>) -> String {
  |                                                          ^^^^
